--- a/firmware/stm32g4-relay/stm32g4-relay.ioc
+++ b/firmware/stm32g4-relay/stm32g4-relay.ioc
@@ -75,27 +75,27 @@ Mcu.IPNb=9
 Mcu.Name=STM32G431C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
-Mcu.Pin1=PF0-OSC_IN
-Mcu.Pin10=PB11
-Mcu.Pin11=PB14
-Mcu.Pin12=PB15
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
 Mcu.Pin16=PB6
 Mcu.Pin17=PB7
 Mcu.Pin18=PB9
 Mcu.Pin19=VP_SYS_VS_Systick
-Mcu.Pin2=PF1-OSC_OUT
+Mcu.Pin2=PF0-OSC_IN
 Mcu.Pin20=VP_SYS_VS_DBSignals
 Mcu.Pin21=VP_TIM17_VS_ClockSourceINT
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB10
+Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
 Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -151,10 +151,6 @@ PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=RLY2
 PB15.Locked=true
 PB15.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=BTN
-PB3.Locked=true
-PB3.Signal=GPIO_Input
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=U1_TXD
 PB6.Locked=true
@@ -174,6 +170,11 @@ PC13.GPIO_Label=LED
 PC13.Locked=true
 PC13.PinState=GPIO_PIN_SET
 PC13.Signal=GPIO_Output
+PC14-OSC32_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC14-OSC32_IN.GPIO_Label=BTN
+PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLUP
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=GPIO_Input
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -261,7 +262,8 @@ SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
-TIM17.IPParameters=Prescaler
+TIM17.IPParameters=Prescaler,PeriodNoDither
+TIM17.PeriodNoDither=1000-1
 TIM17.Prescaler=170-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
