--- a/firmware/stm32g4-relay/stm32g4-relay.ioc
+++ b/firmware/stm32g4-relay/stm32g4-relay.ioc
@@ -59,19 +59,22 @@ Dma.USART3_RX.1.SyncRequestNumber=1
 Dma.USART3_RX.1.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C2.IPParameters=Timing
+I2C2.Timing=0x30A0A7FB
 KeepUserPlacement=false
 Mcu.CPN=STM32G431CBT6
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=TIM17
-Mcu.IP6=USART1
-Mcu.IP7=USART2
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP1=I2C2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=TIM17
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32G431C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -80,15 +83,17 @@ Mcu.Pin10=PB10
 Mcu.Pin11=PB11
 Mcu.Pin12=PB14
 Mcu.Pin13=PB15
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=PB9
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=VP_SYS_VS_DBSignals
-Mcu.Pin21=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_SYS_VS_DBSignals
+Mcu.Pin23=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -96,7 +101,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=22
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBTx
@@ -134,6 +139,12 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.Locked=true
+PA8.Mode=I2C
+PA8.Signal=I2C2_SDA
+PA9.Locked=true
+PA9.Mode=I2C
+PA9.Signal=I2C2_SCL
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=U3_TXD
 PB10.Mode=Asynchronous
@@ -147,10 +158,16 @@ PB14.GPIO_Label=U3_DE
 PB14.Locked=true
 PB14.Mode=Hardware Flow Control (RS485)
 PB14.Signal=USART3_DE
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=PinState,GPIO_Label
 PB15.GPIO_Label=RLY2
 PB15.Locked=true
+PB15.PinState=GPIO_PIN_RESET
 PB15.Signal=GPIO_Output
+PB5.GPIOParameters=PinState,GPIO_Label
+PB5.GPIO_Label=RLY
+PB5.Locked=true
+PB5.PinState=GPIO_PIN_RESET
+PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=U1_TXD
 PB6.Locked=true
@@ -161,10 +178,6 @@ PB7.GPIO_Label=U1_RXD
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
-PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=RLY
-PB9.Locked=true
-PB9.Signal=GPIO_Output
 PC13.GPIOParameters=PinState,GPIO_Label
 PC13.GPIO_Label=LED
 PC13.Locked=true
@@ -210,7 +223,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_TIM17_Init-TIM17-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
