--- a/firmware/stm32g4-relay/stm32g4-relay.ioc
+++ b/firmware/stm32g4-relay/stm32g4-relay.ioc
@@ -5,7 +5,25 @@ CAD.provider=
 Dma.Request0=USART2_RX
 Dma.Request1=USART3_RX
 Dma.Request2=USART1_RX
-Dma.RequestsNb=3
+Dma.Request3=SPI1_RX
+Dma.RequestsNb=4
+Dma.SPI1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.3.EventEnable=DISABLE
+Dma.SPI1_RX.3.Instance=DMA1_Channel4
+Dma.SPI1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.3.Mode=DMA_CIRCULAR
+Dma.SPI1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.3.RequestNumber=1
+Dma.SPI1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.3.SignalID=NONE
+Dma.SPI1_RX.3.SyncEnable=DISABLE
+Dma.SPI1_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.3.SyncRequestNumber=1
+Dma.SPI1_RX.3.SyncSignalID=NONE
 Dma.USART1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.2.EventEnable=DISABLE
 Dma.USART1_RX.2.Instance=DMA1_Channel3
@@ -57,6 +75,10 @@ Dma.USART3_RX.1.SyncEnable=DISABLE
 Dma.USART3_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.USART3_RX.1.SyncRequestNumber=1
 Dma.USART3_RX.1.SyncSignalID=NONE
+FDCAN1.CalculateBaudRateNominal=2125000
+FDCAN1.CalculateTimeBitNominal=470
+FDCAN1.CalculateTimeQuantumNominal=94.11764705882354
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.IPParameters=Timing
@@ -65,43 +87,53 @@ KeepUserPlacement=false
 Mcu.CPN=STM32G431CBT6
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
-Mcu.IP1=I2C2
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM17
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP1=FDCAN1
+Mcu.IP10=USART3
+Mcu.IP11=USB
+Mcu.IP12=USB_DEVICE
+Mcu.IP2=I2C2
+Mcu.IP3=LPUART1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=13
 Mcu.Name=STM32G431C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=PB14
-Mcu.Pin13=PB15
-Mcu.Pin14=PA8
-Mcu.Pin15=PA9
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PB5
-Mcu.Pin19=PB6
+Mcu.Pin10=PB0
+Mcu.Pin11=PB10
+Mcu.Pin12=PB11
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=PB7
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_SYS_VS_DBSignals
-Mcu.Pin23=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PB3
+Mcu.Pin23=PB5
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=PB8-BOOT0
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_SYS_VS_DBSignals
 Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=24
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBTx
@@ -117,22 +149,39 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA11.Locked=true
+PA11.Mode=Device
+PA11.Signal=USB_DM
+PA12.Mode=Device
+PA12.Signal=USB_DP
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=SWDIO
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=SWCLK
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=U2_RXD
+PA15.Mode=Asynchronous
+PA15.Signal=USART2_RX
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=U2_TXD
+PA2.GPIO_Label=LPU_TXD
 PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
+PA2.Signal=LPUART1_TX
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=U2_RXD
+PA3.GPIO_Label=LPU_RXD
 PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
-PA4.Mode=NSS_Signal_Hard_Output
-PA4.Signal=SPI1_NSS
+PA3.Signal=LPUART1_RX
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=SPI1_CS
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=SPI1_CLK
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -145,6 +194,10 @@ PA8.Signal=I2C2_SDA
 PA9.Locked=true
 PA9.Mode=I2C
 PA9.Signal=I2C2_SCL
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=SW
+PB0.Locked=true
+PB0.Signal=GPIO_Input
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=U3_TXD
 PB10.Mode=Asynchronous
@@ -163,8 +216,12 @@ PB15.GPIO_Label=RLY2
 PB15.Locked=true
 PB15.PinState=GPIO_PIN_RESET
 PB15.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=U2_TXD
+PB3.Mode=Asynchronous
+PB3.Signal=USART2_TX
 PB5.GPIOParameters=PinState,GPIO_Label
-PB5.GPIO_Label=RLY
+PB5.GPIO_Label=RLY1
 PB5.Locked=true
 PB5.PinState=GPIO_PIN_RESET
 PB5.Signal=GPIO_Output
@@ -178,10 +235,18 @@ PB7.GPIO_Label=U1_RXD
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
-PC13.GPIOParameters=PinState,GPIO_Label
+PB8-BOOT0.GPIOParameters=GPIO_Label
+PB8-BOOT0.GPIO_Label=CAN_RXD
+PB8-BOOT0.Locked=true
+PB8-BOOT0.Mode=FDCAN_Activate
+PB8-BOOT0.Signal=FDCAN1_RX
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=CAN_TXD
+PB9.Mode=FDCAN_Activate
+PB9.Signal=FDCAN1_TX
+PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=LED
 PC13.Locked=true
-PC13.PinState=GPIO_PIN_SET
 PC13.Signal=GPIO_Output
 PC14-OSC32_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC14-OSC32_IN.GPIO_Label=BTN
@@ -223,13 +288,14 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_TIM17_Init-TIM17-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_FDCAN1_Init-FDCAN1-false-HAL-true,10-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,11-MX_USB_Device_Init-USB_DEVICE-false-HAL-false
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
 RCC.APB1TimFreq_Value=170000000
 RCC.APB2Freq_Value=170000000
 RCC.APB2TimFreq_Value=170000000
+RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CRSFreq_Value=48000000
 RCC.CortexFreq_Value=170000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
@@ -244,7 +310,7 @@ RCC.I2C1Freq_Value=170000000
 RCC.I2C2Freq_Value=170000000
 RCC.I2C3Freq_Value=170000000
 RCC.I2SFreq_Value=170000000
-RCC.IPParameters=ADC12Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADC12Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1Freq_Value=170000000
 RCC.LPUART1Freq_Value=170000000
 RCC.LSCOPinFreq_Value=32000
@@ -258,26 +324,24 @@ RCC.PLLQoutputFreq_Value=170000000
 RCC.PLLRCLKFreq_Value=170000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=170000000
-RCC.RNGFreq_Value=170000000
+RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=170000000
 RCC.SYSCLKFreq_VALUE=170000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.USART1Freq_Value=170000000
 RCC.USART2Freq_Value=170000000
 RCC.USART3Freq_Value=170000000
-RCC.USBFreq_Value=170000000
+RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=42.5 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,VirtualNSS
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,NSSPMode
 SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualNSS=VM_NSSHARD
+SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
-TIM17.IPParameters=Prescaler,PeriodNoDither
-TIM17.PeriodNoDither=1000-1
-TIM17.Prescaler=170-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
@@ -285,11 +349,15 @@ USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous,VirtualMode-Hardware Flow Control (RS485)
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART3.VirtualMode-Hardware\ Flow\ Control\ (RS485)=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
 isbadioc=false
