--- a/firmware/stm32g4-relay/stm32g4-relay.ioc
+++ b/firmware/stm32g4-relay/stm32g4-relay.ioc
@@ -6,13 +6,14 @@ Dma.Request0=USART2_RX
 Dma.Request1=USART3_RX
 Dma.Request2=USART1_RX
 Dma.Request3=SPI1_RX
-Dma.RequestsNb=4
+Dma.Request4=SPI1_TX
+Dma.RequestsNb=5
 Dma.SPI1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.3.EventEnable=DISABLE
 Dma.SPI1_RX.3.Instance=DMA1_Channel4
 Dma.SPI1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI1_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.3.Mode=DMA_CIRCULAR
+Dma.SPI1_RX.3.Mode=DMA_NORMAL
 Dma.SPI1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_RX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -24,6 +25,23 @@ Dma.SPI1_RX.3.SyncEnable=DISABLE
 Dma.SPI1_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_RX.3.SyncRequestNumber=1
 Dma.SPI1_RX.3.SyncSignalID=NONE
+Dma.SPI1_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.4.EventEnable=DISABLE
+Dma.SPI1_TX.4.Instance=DMA1_Channel5
+Dma.SPI1_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.4.Mode=DMA_NORMAL
+Dma.SPI1_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.4.RequestNumber=1
+Dma.SPI1_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.4.SignalID=NONE
+Dma.SPI1_TX.4.SyncEnable=DISABLE
+Dma.SPI1_TX.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.4.SyncRequestNumber=1
+Dma.SPI1_TX.4.SyncSignalID=NONE
 Dma.USART1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.2.EventEnable=DISABLE
 Dma.USART1_RX.2.Instance=DMA1_Channel3
@@ -140,13 +158,18 @@ Mcu.UserName=STM32G431CBTx
 MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel4_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C2_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -176,16 +199,23 @@ PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=LPU_RXD
 PA3.Mode=Asynchronous
 PA3.Signal=LPUART1_RX
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA4.GPIO_Label=SPI1_CS
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Label
+PA5.GPIOParameters=GPIO_Speed,GPIO_Label
 PA5.GPIO_Label=SPI1_CLK
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Speed
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Speed
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.Locked=true
@@ -340,7 +370,7 @@ SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,NSSPMode
 SPI1.Mode=SPI_MODE_MASTER
-SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
+SPI1.NSSPMode=SPI_NSS_PULSE_ENABLE
 SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
