--- a/firmware/stm32g4-relay/stm32g4-relay.ioc
+++ b/firmware/stm32g4-relay/stm32g4-relay.ioc
@@ -2,12 +2,30 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.LPUART1_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.LPUART1_RX.5.EventEnable=DISABLE
+Dma.LPUART1_RX.5.Instance=DMA1_Channel6
+Dma.LPUART1_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.LPUART1_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.LPUART1_RX.5.Mode=DMA_CIRCULAR
+Dma.LPUART1_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.LPUART1_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.LPUART1_RX.5.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.LPUART1_RX.5.Priority=DMA_PRIORITY_LOW
+Dma.LPUART1_RX.5.RequestNumber=1
+Dma.LPUART1_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.LPUART1_RX.5.SignalID=NONE
+Dma.LPUART1_RX.5.SyncEnable=DISABLE
+Dma.LPUART1_RX.5.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.LPUART1_RX.5.SyncRequestNumber=1
+Dma.LPUART1_RX.5.SyncSignalID=NONE
 Dma.Request0=USART2_RX
 Dma.Request1=USART3_RX
 Dma.Request2=USART1_RX
 Dma.Request3=SPI1_RX
 Dma.Request4=SPI1_TX
-Dma.RequestsNb=5
+Dma.Request5=LPUART1_RX
+Dma.RequestsNb=6
 Dma.SPI1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.3.EventEnable=DISABLE
 Dma.SPI1_RX.3.Instance=DMA1_Channel4
