--- a/firmware/stm32g4-relay/stm32g4-relay.ioc
+++ b/firmware/stm32g4-relay/stm32g4-relay.ioc
@@ -2,28 +2,28 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.LPUART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.LPUART1_RX.3.EventEnable=DISABLE
+Dma.LPUART1_RX.3.Instance=DMA1_Channel5
+Dma.LPUART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.LPUART1_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.LPUART1_RX.3.Mode=DMA_CIRCULAR
+Dma.LPUART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.LPUART1_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.LPUART1_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.LPUART1_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.LPUART1_RX.3.RequestNumber=1
+Dma.LPUART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.LPUART1_RX.3.SignalID=NONE
+Dma.LPUART1_RX.3.SyncEnable=DISABLE
+Dma.LPUART1_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.LPUART1_RX.3.SyncRequestNumber=1
+Dma.LPUART1_RX.3.SyncSignalID=NONE
 Dma.Request0=USART2_RX
 Dma.Request1=USART3_RX
 Dma.Request2=USART1_RX
-Dma.Request3=SPI1_RX
+Dma.Request3=LPUART1_RX
 Dma.RequestsNb=4
-Dma.SPI1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.3.EventEnable=DISABLE
-Dma.SPI1_RX.3.Instance=DMA1_Channel4
-Dma.SPI1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.3.Mode=DMA_CIRCULAR
-Dma.SPI1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_RX.3.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_RX.3.RequestNumber=1
-Dma.SPI1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_RX.3.SignalID=NONE
-Dma.SPI1_RX.3.SyncEnable=DISABLE
-Dma.SPI1_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_RX.3.SyncRequestNumber=1
-Dma.SPI1_RX.3.SyncSignalID=NONE
 Dma.USART1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.2.EventEnable=DISABLE
 Dma.USART1_RX.2.Instance=DMA1_Channel3
@@ -75,14 +75,14 @@ Dma.USART3_RX.1.SyncEnable=DISABLE
 Dma.USART3_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.USART3_RX.1.SyncRequestNumber=1
 Dma.USART3_RX.1.SyncSignalID=NONE
-FDCAN1.CalculateBaudRateNominal=2125000
-FDCAN1.CalculateTimeBitNominal=470
-FDCAN1.CalculateTimeQuantumNominal=94.11764705882354
+FDCAN1.CalculateBaudRateNominal=1000000
+FDCAN1.CalculateTimeBitNominal=1000
+FDCAN1.CalculateTimeQuantumNominal=200.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.IPParameters=Timing
-I2C2.Timing=0x30A0A7FB
+I2C2.Timing=0x30909DEC
 KeepUserPlacement=false
 Mcu.CPN=STM32G431CBT6
 Mcu.Family=STM32G4
@@ -141,6 +141,7 @@ MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -176,16 +177,23 @@ PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=LPU_RXD
 PA3.Mode=Asynchronous
 PA3.Signal=LPUART1_RX
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA4.GPIO_Label=SPI1_CS
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Label
+PA5.GPIOParameters=GPIO_Speed,GPIO_Label
 PA5.GPIO_Label=SPI1_CLK
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Speed
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Speed
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.Locked=true
@@ -198,16 +206,19 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=SW
 PB0.Locked=true
 PB0.Signal=GPIO_Input
-PB10.GPIOParameters=GPIO_Label
+PB10.GPIOParameters=GPIO_Speed,GPIO_Label
 PB10.GPIO_Label=U3_TXD
+PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
-PB11.GPIOParameters=GPIO_Label
+PB11.GPIOParameters=GPIO_Speed,GPIO_Label
 PB11.GPIO_Label=U3_RXD
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
-PB14.GPIOParameters=GPIO_Label
+PB14.GPIOParameters=GPIO_Speed,GPIO_Label
 PB14.GPIO_Label=U3_DE
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB14.Locked=true
 PB14.Mode=Hardware Flow Control (RS485)
 PB14.Signal=USART3_DE
@@ -289,56 +300,58 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_FDCAN1_Init-FDCAN1-false-HAL-true,10-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,11-MX_USB_Device_Init-USB_DEVICE-false-HAL-false
-RCC.ADC12Freq_Value=170000000
-RCC.AHBFreq_Value=170000000
-RCC.APB1Freq_Value=170000000
-RCC.APB1TimFreq_Value=170000000
-RCC.APB2Freq_Value=170000000
-RCC.APB2TimFreq_Value=170000000
+RCC.ADC12Freq_Value=160000000
+RCC.AHBFreq_Value=160000000
+RCC.APB1Freq_Value=160000000
+RCC.APB1TimFreq_Value=160000000
+RCC.APB2Freq_Value=160000000
+RCC.APB2TimFreq_Value=160000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CRSFreq_Value=48000000
-RCC.CortexFreq_Value=170000000
+RCC.CortexFreq_Value=160000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
-RCC.FCLKCortexFreq_Value=170000000
-RCC.FDCANFreq_Value=170000000
+RCC.FCLKCortexFreq_Value=160000000
+RCC.FDCANCLockSelection=RCC_FDCANCLKSOURCE_PLL
+RCC.FDCANFreq_Value=80000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=170000000
+RCC.HCLKFreq_Value=160000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=170000000
-RCC.I2C2Freq_Value=170000000
-RCC.I2C3Freq_Value=170000000
-RCC.I2SFreq_Value=170000000
-RCC.IPParameters=ADC12Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=170000000
-RCC.LPUART1Freq_Value=170000000
+RCC.I2C1Freq_Value=160000000
+RCC.I2C2Freq_Value=160000000
+RCC.I2C3Freq_Value=160000000
+RCC.I2SFreq_Value=160000000
+RCC.IPParameters=ADC12Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANCLockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.LPTIM1Freq_Value=160000000
+RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLM=RCC_PLLM_DIV2
-RCC.PLLN=85
-RCC.PLLPoutputFreq_Value=170000000
-RCC.PLLQoutputFreq_Value=170000000
-RCC.PLLRCLKFreq_Value=170000000
+RCC.PLLN=40
+RCC.PLLPoutputFreq_Value=160000000
+RCC.PLLQ=RCC_PLLQ_DIV4
+RCC.PLLQoutputFreq_Value=80000000
+RCC.PLLRCLKFreq_Value=160000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PWRFreq_Value=170000000
+RCC.PWRFreq_Value=160000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=170000000
-RCC.SYSCLKFreq_VALUE=170000000
+RCC.SAI1Freq_Value=160000000
+RCC.SYSCLKFreq_VALUE=160000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USART1Freq_Value=170000000
-RCC.USART2Freq_Value=170000000
-RCC.USART3Freq_Value=170000000
+RCC.USART1Freq_Value=160000000
+RCC.USART2Freq_Value=160000000
+RCC.USART3Freq_Value=160000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=340000000
+RCC.VCOInputFreq_Value=8000000
+RCC.VCOOutputFreq_Value=320000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=42.5 MBits/s
+SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
+SPI1.CalculateBaudRate=40.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,NSSPMode
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,NSSPMode,CRCCalculation
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
