--- a/firmware/stm32g4-relay/stm32g4-relay.ioc
+++ b/firmware/stm32g4-relay/stm32g4-relay.ioc
@@ -83,8 +83,9 @@ FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,Calculat
 FDCAN1.StdFiltersNbr=28
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C2.IPParameters=Timing
-I2C2.Timing=0x30909DEC
+I2C2.I2C_Speed_Mode=I2C_Fast
+I2C2.IPParameters=Timing,I2C_Speed_Mode
+I2C2.Timing=0x10F32A82
 KeepUserPlacement=false
 Mcu.CPN=STM32G431CBT6
 Mcu.Family=STM32G4
@@ -113,29 +114,30 @@ Mcu.Pin13=PB14
 Mcu.Pin14=PB15
 Mcu.Pin15=PA8
 Mcu.Pin16=PA9
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11
+Mcu.Pin19=PA12
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=PA14
-Mcu.Pin21=PA15
-Mcu.Pin22=PB3
-Mcu.Pin23=PB5
-Mcu.Pin24=PB6
-Mcu.Pin25=PB7
-Mcu.Pin26=PB8-BOOT0
-Mcu.Pin27=PB9
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_SYS_VS_DBSignals
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PA15
+Mcu.Pin23=PB3
+Mcu.Pin24=PB5
+Mcu.Pin25=PB6
+Mcu.Pin26=PB7
+Mcu.Pin27=PB8-BOOT0
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PF1-OSC_OUT
-Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_SYS_VS_DBSignals
+Mcu.Pin31=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=31
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBTx
@@ -157,6 +159,11 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.GPIOParameters=PinState,GPIO_Label
+PA10.GPIO_Label=CAN_STB
+PA10.Locked=true
+PA10.PinState=GPIO_PIN_SET
+PA10.Signal=GPIO_Output
 PA11.Locked=true
 PA11.Mode=Device
 PA11.Signal=USB_DM
